<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context="com.pwr.piotr.androidproject.EditorActivity"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/editingView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:scaleType="center" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/saveBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save"
            android:visibility="invisible" />

        <Button
            android:id="@+id/cutBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cut"
            android:visibility="invisible" />

        <Button
            android:id="@+id/resetBtn"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/reset"
            android:visibility="invisible" />

    </LinearLayout>
</LinearLayout>
