<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.pwr.piotr.androidproject.MainMenuActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_marginTop="30dp">

        <Button
            android:id="@+id/scanerBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scan_your_room"
            android:layout_marginBottom="10dp"/>

        <Button
            android:id="@+id/browserBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Browse gallery"
            android:layout_marginBottom="10dp"/>

        <Button
            android:id="@+id/modelBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/saved_models"
            android:layout_marginBottom="10dp"/>

        <Button
            android:id="@+id/feedbackBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/feedback"
            android:layout_marginBottom="10dp"/>

    </LinearLayout>

</LinearLayout>